Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120962

QTextCursor::removeSelectedText leads to crash

    XMLWordPrintable

Details

    • Windows
    • 96f1ef1c1 (dev), 7878c8b6f (6.7), e0fbc8d35 (6.6), 9c15588a5 (tqtc/lts-6.5)

    Description

      If QTextDocument is cloned() after the call of QTextCursor::removeSelectedText() it Asserts/Crash.

       

      This tiny example reproduces it

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            irfan.omair@digia.com Irfan Omair
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes