Fix out of bounds access during QTextDocument cloning

Fixes: QTBUG-120962
Pick-to: 6.6 6.5
Change-Id: Ib2a35acd5a0d673b39556a4aa930e37eb40b39b2
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
(cherry picked from commit 96f1ef1c1c43a965697022f99105c11613129e3d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>